# sv-JTracing

./: .gitignore  CMakeLists.txt  LICENSE  Makefile  README.md
docs/: lexer.md  parser.md  readme  readme.md
include/ast/: BinaryExprAST.h  CmpExprAST.h  DefinitionAST.h  ExprAST.h  ForAST.h  ModuleAST.h  NumberExprAST.h  PrototypeAST.h  VariableExprAST.h  allAST.h
include/handlError/: LogError.h
include/parsing/: Lexer.h  Parser.h  Token.h  TokenKind.h  keywordsDefine.h
include/preprocessing/: SourceManager.h
include/server/: ThreadPool.h
include/syntax/: SyntaxNode.h
include/utility/: Allocator.h  allinclude.h
source/: main.cpp
source/handlError/: LogError.cpp
source/handlMessage/: LogError.cpp
source/parsing/: Lexer.cpp  Parser.cpp  Token.cpp  TokenKind.cpp
source/preprocessing/: SourceManager.cpp
source/syntax/: SyntaxNode.cpp
source/utility/: Allocator.cpp
test/: test.sv  test_module.sv
